applyRules directly in computerPredictions